--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "async": "^3.2.6",
     "axios": "^0.21.1",
     "clipboard": "^2.0.8",
+    "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
     "echarts": "^5.3.3",
     "element-plus": "^2.9.6",
     "enquire.js": "^2.1.6",
+    "events": "^3.3.0",
     "everright-filter": "^1.1.1",
+    "gsap": "^3.12.2",
+    "howler": "^2.2.3",
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
     "lodash": "^4.17.21",
@@ -45,29 +49,29 @@
     "signature_pad": "^5.0.4",
     "socket.io-client": "^4.8.1",
     "sortablejs": "^1.15.6",
+    "stats.js": "^0.17.0",
+    "three": "^0.153.0",
+    "tslib": "^2.8.1",
     "uuid": "^11.1.0",
     "vant": "^4.9.17",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0",
-    "vxe-table": "^4.11.20",
-    "dat.gui": "^0.7.9",
-    "events": "^3.3.0",
-    "gsap": "^3.12.2",
-    "howler": "^2.2.3",
-    "stats.js": "^0.17.0",
-    "three": "^0.153.0",
-    "tslib": "^2.8.1"
+    "vxe-pc-ui": "^4.4.26",
+    "vxe-table": "^4.11.20"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.0",
+    "@types/dat.gui": "^0.7.10",
+    "@types/howler": "^2.2.7",
     "@types/js-cookie": "^3.0.2",
     "@types/lodash": "^4.14.191",
     "@types/mockjs": "^1.0.3",
     "@types/node": "^20.3.1",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.6",
+    "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "autoprefixer": "^10.4.7",
@@ -91,9 +95,6 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.9",
     "vitepress": "^1.0.0-alpha.61",
-    "vue-tsc": "^1.4.2",
-    "@types/dat.gui": "^0.7.10",
-    "@types/howler": "^2.2.7",
-    "@types/three": "^0.152.1"
+    "vue-tsc": "^1.4.2"
   }
 }
