--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vant/area-data": "^2.0.0",
     "@vant/touch-emulator": "^1.4.0",
     "@visactor/vtable": "^1.17.3",
+    "@visactor/vtable-editors": "^1.17.3",
     "@visactor/vue-vtable": "^1.17.3",
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
