--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0",
     "vxe-pc-ui": "^4.4.26",
-    "vxe-table": "^4.11.20"
+    "vxe-table": "^4.11.20",
+    "workerpool": "^9.2.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.0",
