--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.52.2",
     "nanoid": "^5.1.3",
     "nprogress": "^0.2.0",
     "nzh": "^1.0.14",
