--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@feathersjs/authentication-client": "^5.0.33",
     "@feathersjs/feathers": "^5.0.33",
     "@feathersjs/socketio-client": "^5.0.33",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@tailwindcss/vite": "^4.1.6",
     "@types/lodash": "^4.17.12",
     "@types/sortablejs": "^1.15.8",
     "@vant/area-data": "^2.0.0",
@@ -78,7 +80,7 @@
     "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.21",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.20.1",
@@ -91,7 +93,7 @@
     "highlight.js": "^11.6.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.5.3",
     "prettier": "^2.8.7",
     "sass": "^1.63.4",
     "tailwindcss": "^4.1.6",
