--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "dev:erp": "cross-env VITE_PORT=3004 vite",
-    "build": "vue-tsc && vite build",
+    "build": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
+    "build:app": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build --mode app",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -100,7 +101,6 @@
     "typescript": "^5.0.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.9",
-    "vitepress": "^1.0.0-alpha.61",
-    "vue-tsc": "^1.4.2"
+    "vitepress": "^1.0.0-alpha.61"
   }
 }
