--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "everright-filter": "^1.1.1",
     "gsap": "^3.12.2",
     "howler": "^2.2.3",
+    "immer": "^10.1.1",
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
     "lodash": "^4.17.21",
