--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "@types/lodash": "^4.17.12",
     "@types/sortablejs": "^1.15.8",
+    "@unocss/reset": "^66.2.0",
     "@vant/area-data": "^2.0.0",
     "@vant/touch-emulator": "^1.4.0",
     "@visactor/vtable": "^1.17.3",
@@ -74,6 +75,7 @@
     "stats.js": "^0.17.0",
     "three": "^0.153.0",
     "tslib": "^2.8.1",
+    "unocss": "^66.2.0",
     "uuid": "^11.1.0",
     "validator": "^13.15.15",
     "vant": "^4.9.17",
