--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@feathersjs/authentication-client": "^5.0.33",
     "@feathersjs/feathers": "^5.0.33",
     "@feathersjs/socketio-client": "^5.0.33",
+    "@iconify-json/bi": "^1.1.17",
+    "@iconify-json/carbon": "^1.1.17",
+    "@iconify-json/mdi": "^1.1.53",
+    "@iconify-json/ri": "^1.1.10",
     "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/vite": "^4.1.6",
     "@types/lodash": "^4.17.12",
@@ -97,6 +101,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.14.1",
     "@types/dat.gui": "^0.7.10",
     "@types/howler": "^2.2.7",
     "@types/js-cookie": "^3.0.2",
@@ -129,5 +134,11 @@
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.9",
     "vitepress": "^1.0.0-alpha.61"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@antfu",
+      "@unocss"
+    ]
   }
 }
