--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jss-preset-default": "^10.10.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
+    "moment": "^2.30.1",
     "monaco-editor": "^0.52.2",
     "nanoid": "^5.1.3",
     "normalize.css": "^8.0.1",
