--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev:erp": "cross-env VITE_PORT=3004 vite",
+    "dev:pro": "cross-env VITE_ENVIRONMENT=production vite",
     "build": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
     "build:app": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build --mode app",
     "preview": "vite preview"
@@ -20,8 +21,6 @@
     "@iconify-json/carbon": "^1.1.17",
     "@iconify-json/mdi": "^1.1.53",
     "@iconify-json/ri": "^1.1.10",
-    "@tailwindcss/postcss": "^4.1.6",
-    "@tailwindcss/vite": "^4.1.6",
     "@types/lodash": "^4.17.12",
     "@types/sortablejs": "^1.15.8",
     "@unocss/reset": "^66.2.0",
@@ -128,10 +127,12 @@
     "highlight.js": "^11.6.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.6",
+    "postcss-nesting": "^13.0.2",
     "prettier": "^2.8.7",
     "sass": "^1.63.4",
-    "tailwindcss": "^4.1.6",
+    "tailwindcss": "3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.9",
