--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "dev:erp": "cross-env VITE_PORT=3004 vite",
+    "dev": "cross-env VITE_ENVIRONMENT=development vite",
+    "dev:erp": "cross-env VITE_ENVIRONMENT=environment VITE_PORT=3004 vite",
     "dev:pro": "cross-env VITE_ENVIRONMENT=production vite",
     "build": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
     "build:app": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build --mode app",
