--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@unocss/reset": "^66.2.0",
     "@vant/area-data": "^2.0.0",
     "@vant/touch-emulator": "^1.4.0",
-    "@visactor/vtable": "^1.17.3",
+    "@visactor/vtable": "^1.19.1",
     "@visactor/vtable-editors": "^1.17.3",
     "@visactor/vtable-export": "^1.17.4",
+    "@visactor/vtable-gantt": "^1.19.1",
     "@visactor/vue-vtable": "^1.17.3",
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
@@ -102,7 +103,6 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.14.1",
     "@types/dat.gui": "^0.7.10",
     "@types/howler": "^2.2.7",
     "@types/js-cookie": "^3.0.2",
@@ -120,10 +120,6 @@
     "body-parser": "^1.20.1",
     "crypto-js": "^4.1.1",
     "gh-pages": "^3.1.0",
-    "gulp": "^4.0.2",
-    "gulp-clean": "^0.4.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.4",
     "highlight.js": "^11.6.0",
     "less": "^4.1.3",
     "mockjs": "^1.1.0",
