--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noEmit": true,
     "types": ["node", "vite/client"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/pages/platform/index.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
