--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "@unocss/reset": "^66.2.0",
     "@vant/area-data": "^2.0.0",
     "@vant/touch-emulator": "^1.4.0",
-    "@visactor/vtable": "^1.19.1",
+    "@visactor/vtable": "1.17.3",
     "@visactor/vtable-editors": "^1.17.3",
     "@visactor/vtable-export": "^1.17.4",
-    "@visactor/vtable-gantt": "^1.19.1",
-    "@visactor/vue-vtable": "^1.17.3",
+    "@visactor/vtable-gantt": "1.17.3",
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
