--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env VITE_ENVIRONMENT=development vite",
     "dev:erp": "cross-env VITE_ENVIRONMENT=environment VITE_PORT=3004 vite",
+    "dev:gantt": "cross-env VITE_ENVIRONMENT=environment VITE_PORT=3005 vite",
     "dev:pro": "cross-env VITE_ENVIRONMENT=production vite",
     "build": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build",
     "build:app": "node --max-old-space-size=8192 node_modules/vite/bin/vite.js build --mode app",
