--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@iconify-json/carbon": "^1.1.17",
     "@iconify-json/mdi": "^1.1.53",
     "@iconify-json/ri": "^1.1.10",
+    "@logicflow/core": "^2.0.16",
+    "@logicflow/extension": "^2.0.21",
     "@types/lodash": "^4.17.12",
     "@types/sortablejs": "^1.15.8",
     "@unocss/reset": "^66.2.0",
@@ -31,6 +33,8 @@
     "@visactor/vtable-editors": "^1.17.3",
     "@visactor/vtable-export": "^1.17.4",
     "@visactor/vtable-gantt": "1.17.3",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/core": "^1.45.0",
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -43,6 +47,7 @@
     "bwip-js": "^4.6.0",
     "clipboard": "^2.0.8",
     "d3": "^7.9.0",
+    "dagre": "^0.8.5",
     "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
