--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@visactor/vtable-export": "^1.17.4",
     "@visactor/vtable-gantt": "1.17.3",
     "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.45.0",
+    "@vue-flow/minimap": "^1.5.3",
+    "@vue-flow/node-toolbar": "^1.1.1",
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
