--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@vue/shared": "^3.5.13",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
-    "@vueuse/core": "^13.1.0",
+    "@vueuse/core": "^13.5.0",
     "@wangeditor/editor": "^5.1.23",
     "ant-design-vue": "^3.2.15",
     "async": "^3.2.6",
@@ -68,6 +68,7 @@
     "jsplumb": "^2.15.6",
     "jss": "^10.10.0",
     "jss-preset-default": "^10.10.0",
+    "keyboardjs": "^2.7.0",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "moment": "^2.30.1",
