--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "moment": "^2.30.1",
     "monaco-editor": "^0.52.2",
     "nanoid": "^5.1.3",
+    "nodemailer": "^7.0.5",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "nzh": "^1.0.14",
@@ -115,6 +116,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/dat.gui": "^0.7.10",
     "@types/howler": "^2.2.7",
     "@types/js-cookie": "^3.0.2",
