--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@feathersjs/authentication-client": "^5.0.33",
     "@feathersjs/feathers": "^5.0.33",
     "@feathersjs/socketio-client": "^5.0.33",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "@iconify-json/bi": "^1.1.17",
     "@iconify-json/carbon": "^1.1.17",
     "@iconify-json/mdi": "^1.1.53",
@@ -56,6 +60,7 @@
     "d3": "^7.9.0",
     "dagre": "^0.8.5",
     "dat.gui": "^0.7.9",
+    "date-holidays": "^3.24.4",
     "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
     "easyqrcodejs": "^4.6.2",
@@ -84,6 +89,7 @@
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "nzh": "^1.0.14",
+    "papaparse": "^5.5.2",
     "path-to-regexp": "^8.2.0",
     "pinia": "^3.0.2",
     "qs": "^6.10.1",
