--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@feathersjs/authentication-client": "^5.0.33",
     "@feathersjs/feathers": "^5.0.33",
     "@feathersjs/socketio-client": "^5.0.33",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
